--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -1,17 +1,11 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
-    <h:head>
-        <title>Sistema de Gerenciamento</title>
-    </h:head>
-    <h:body>
-        <h:form>
-            <h:commandLink value="Manutenção de Estados" action="#{controleEstado.listar()}"/>
-            <br/>
-            <h:commandLink value="Manutenção de Marcas" action="#{controleMarca.listar()}"/>
-            <br/>
-            <h:commandLink value="Manutenção de Grupos" action="#{controleGrupo.listar()}"/>
-        </h:form>
-    </h:body>
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+    <ui:composition template="/templates/template.xhtml">
+        <ui:define name="titulo">Seja Bem Vindo ao Sistema</ui:define>
+        <ui:define name="conteudo">
+        </ui:define>
+    </ui:composition>
 </html>
