--- a/web/privado/marca/listar.xhtml
+++ b/web/privado/marca/listar.xhtml
@@ -2,41 +2,44 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
-    <h:head>
-        <title>Listagem de Marcas</title>
-    </h:head>
-    <h:body>
-        <h:form>
-            <h:messages/>
-            <h:commandButton value="Novo" action="#{controleMarca.novo()}"/>
-            <h:dataTable value="#{controleMarca.dao.lista}" var="obj">
-                <h:column>
-                    <f:facet name="header">
-                        <h:outputText value="ID"/>
-                    </f:facet>
-                    <h:outputText value="#{obj.id}"/>
-                </h:column>
-                <h:column>
-                    <f:facet name="header">
-                        <h:outputText value="Nome"/>
-                    </f:facet>
-                    <h:outputText value="#{obj.nome}"/>
-                </h:column>
-                <h:column>
-                    <f:facet name="header">
-                        <h:outputText value="Alterar"/>
-                    </f:facet>
-                    <h:commandLink value="Alterar" action="#{controleMarca.editar(obj.id)}" />
-                </h:column>
-                <h:column>
-                    <f:facet name="header">
-                        <h:outputText value="Remover"/>
-                    </f:facet>
-                    <h:commandLink value="Remover" action="#{controleMarca.remover(obj.id)}" onclick="if(!confirm('Confirma a exclusão')) return false" />
-                </h:column>
-            </h:dataTable>
-        </h:form>
-    </h:body>
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+    
+    <ui:composition template="/templates/template.xhtml">
+        <ui:define name="titulo">Controle de Marcas</ui:define>
+        <ui:define name="conteudo">
+            <h:form>
+                <h:messages/>
+                <h:commandButton value="Novo" action="#{controleMarca.novo()}"/>
+                <h:dataTable value="#{controleMarca.dao.lista}" var="obj">
+                    <h:column>
+                        <f:facet name="header">
+                            <h:outputText value="ID"/>
+                        </f:facet>
+                        <h:outputText value="#{obj.id}"/>
+                    </h:column>
+                    <h:column>
+                        <f:facet name="header">
+                            <h:outputText value="Nome"/>
+                        </f:facet>
+                        <h:outputText value="#{obj.nome}"/>
+                    </h:column>
+                    <h:column>
+                        <f:facet name="header">
+                            <h:outputText value="Alterar"/>
+                        </f:facet>
+                        <h:commandLink value="Alterar" action="#{controleMarca.editar(obj.id)}" />
+                    </h:column>
+                    <h:column>
+                        <f:facet name="header">
+                            <h:outputText value="Remover"/>
+                        </f:facet>
+                        <h:commandLink value="Remover" action="#{controleMarca.remover(obj.id)}" onclick="if(!confirm('Confirma a exclusão')) return false" />
+                    </h:column>
+                </h:dataTable>
+            </h:form>
+        </ui:define>
+    </ui:composition>
+    
 </html>
 
