--- a/web/privado/marca/formulario.xhtml
+++ b/web/privado/marca/formulario.xhtml
@@ -2,26 +2,28 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
-    <h:head>
-        <title>Edição de Marcas</title>
-    </h:head>
-    <h:body>
-        <h:messages/>
-        <h:form>
-            <h:panelGrid columns="2">
-                <f:facet name="footer">
-                    <div align="center">
-                        <h:commandButton value="Cancelar" action="#{controleMarca.cancelar()}" immediate="true"/>
-                        <h:commandButton value="Salvar" action="#{controleMarca.salvar()}"/>
-                    </div>
-                </f:facet>
-                <h:outputLabel value="ID"/>
-                <h:inputText value="#{controleMarca.objeto.id}" readonly="true" size="12"/>
-                <h:outputLabel value="Nome" />
-                <h:inputText value="#{controleMarca.objeto.nome}" size="40" maxlength="40"/>
-            </h:panelGrid>
-        </h:form>
-    </h:body>
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:p="http://primefaces.org/ui">
+    <ui:composition template="/templates/template.xhtml">
+        <ui:define name="titulo">Manutenção de Marcas</ui:define>
+        <ui:define name="conteudo">
+            <h:messages/>
+            <h:form>
+                <p:panelGrid columns="2">
+                    <f:facet name="footer">
+                        <div align="center">
+                            <p:commandButton value="Cancelar" action="#{controleMarca.cancelar()}" immediate="true" ajax="false"/>
+                            <p:commandButton value="Salvar" action="#{controleMarca.salvar()}" ajax="false"/>
+                        </div>
+                    </f:facet>
+                    <p:outputLabel value="ID"/>
+                    <p:inputText value="#{controleMarca.objeto.id}" readonly="true" size="12"/>
+                    <p:outputLabel value="Nome" />
+                    <p:inputText value="#{controleMarca.objeto.nome}" size="50" maxlength="50"/>
+                </p:panelGrid>
+            </h:form>
+        </ui:define>
+    </ui:composition>
 </html>
 
